--- a/_pages/home.html
+++ b/_pages/home.html
@@ -9,7 +9,9 @@ author_profile: true
   <div class="container">
     <h1>{{ page.title }}</h1>
     <p>Welcome to my machine learning engineer landing page!</p>
-    <a href="/about" class="button">Learn More</a>
+    <a href="/about" class="button" target="_blank" rel="noopener noreferrer"
+      >Learn More</a
+    >
   </div>
 </section>
 
@@ -82,6 +84,8 @@ author_profile: true
       I'm always open to discussing new opportunities and collaborations. Let's
       get in touch!
     </p>
-    <a href="/contact" class="button">Contact Me</a>
+    <a href="/contact" class="button" target="_blank" rel="noopener noreferrer"
+      >Contact Me</a
+    >
   </div>
 </section>
