--- a/_pages/thankyou.html
+++ b/_pages/thankyou.html
@@ -1,5 +1,5 @@
 ---
-permalink: /thankyou.html
+permalink: /thankyou/
 layout: default
 ---
 
@@ -18,8 +18,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Thank you!</h1>
 
-  <p><strong>Thank you!</strong></p>
+  <p><strong>your contact request was well received</strong></p>
   <p>You will be re-contacted soon.</p>
 </div>
