--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,6 +1,9 @@
 ---
 title: Contact
 permalink: /contact/
+header:
+  overlay_image: /assets/images/phones.jpeg
+  overlay_filter: rgba(18,7,41,0.35)
 ---
 
 <section class="contact">
@@ -27,11 +30,16 @@ permalink: /contact/
 
       <div class="field half first">
         <label for="name">Name</label>
-        <input type="text" name="name" required />
+        <input type="text" name="name" placeholder="Your name" required />
       </div>
       <div class="field half">
         <label for="email">Email</label>
-        <input type="email" name="email" placeholder="Email Address" required />
+        <input
+          type="email"
+          name="email"
+          placeholder="yourname@gmail.com"
+          required
+        />
       </div>
       <div class="field">
         <label for="message">Message</label>
