--- a/_pages/applications.html
+++ b/_pages/applications.html
@@ -1,7 +1,8 @@
 ---
 permalink: /applications/
 author_profile: true
-title: Applications
+seo_title: Applications | Arthur Degonde
+description: Applications for my machine learning engineer activity.
 ---
 
 <!-- Features section -->
