--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,9 +1,10 @@
 ---
-title: Contact
 permalink: /contact/
 header:
   overlay_image: /assets/images/phones.jpeg
   overlay_filter: rgba(18,7,41,0.35)
+seo_title: Contact | Arthur Degonde
+description: Contact page.
 ---
 
 <section class="contact">
