--- a/_pages/tools.html
+++ b/_pages/tools.html
@@ -1,10 +1,11 @@
 ---
-title: My toolbox
 permalink: /tools/
 collection: tools
 header:
   overlay_image: /assets/images/toolbox.jpeg
   overlay_filter: rgba(18,7,41,0.35)
+description: The tools I use and I have been using as a machine learning engineer.
+seo_title: Tools | Arthur Degonde
 ---
 
 A non exhaustive list of the machine learning/data science tools I have been
