--- a/_tools/pandas.html
+++ b/_tools/pandas.html
@@ -1,5 +1,5 @@
 ---
 title: pandas
 url_link: https://pandas.pydata.org/
-description: A Python library for data manipulation and analysis
+description: A Python library for data manipulation and analysis.
 ---
