--- a/_tools/sklearn.html
+++ b/_tools/sklearn.html
@@ -1,5 +1,5 @@
 ---
 title: Scikit-learn
 url_link: https://scikit-learn.org/stable/
-description: A Python library for machine learning
+description: A Python library for machine learning.
 ---
