--- a/_tools/mlflow.html
+++ b/_tools/mlflow.html
@@ -1,5 +1,5 @@
 ---
 title: MLflow
 url_link: https://mlflow.org/
-description: A tool for simplifying the process of developing, deploying, and maintaining machine learning models in a production environment
+description: A tool for simplifying the process of developing, deploying, and maintaining machine learning models in a production environment.
 ---
