--- a/_tools/numpy.html
+++ b/_tools/numpy.html
@@ -1,5 +1,5 @@
 ---
 title: Numpy
 url_link: https://numpy.org/
-description: A Python library for numerical computing and data manipulation
+description: A Python library for numerical computing and data manipulation.
 ---
