--- a/_tools/tensorflow.html
+++ b/_tools/tensorflow.html
@@ -1,5 +1,5 @@
 ---
 title: Tensorflow
 url_link: https://www.tensorflow.org/
-description: An open-source machine learning framework developed by Google
+description: An open-source machine learning framework developed by Google.
 ---
