--- a/_pages/applications.html
+++ b/_pages/applications.html
@@ -53,8 +53,6 @@ description: Applications for my machine learning engineer activity.
       I'm always open to discussing new opportunities and collaborations. Let's
       get in touch!
     </p>
-    <a href="/contact" class="button" target="_blank" rel="noopener noreferrer"
-      >Contact Me</a
-    >
+    <a href="/contact" class="button" rel="noopener noreferrer">Contact Me</a>
   </div>
 </section>
