fix home footer and header
fix header

fix home page and footer

--- a/_pages/tools.html
+++ b/_pages/tools.html
@@ -14,3 +14,14 @@ using. {% for tool in site.tools %}
 <h3><a href="{{ tool.url_link }}">{{ tool.title }}</a></h3>
 <p>{{ tool.description }}</p>
 {% endfor %}
+
+<section class="cta">
+  <div class="container">
+    <h2>Ready to work together?</h2>
+    <p>
+      I'm always open to discussing new opportunities and collaborations. Let's
+      get in touch!
+    </p>
+    <a href="/contact" class="button" rel="noopener noreferrer">Contact Me</a>
+  </div>
+</section>
